Dialog css fixes
- Increase max-width of dialogs to 700px
- Allow dialogs to expand to 90% of the height to take advantage of extra space
- Allow extremely long content in dialogs to scroll, but not hide any bottom buttons out of the view
- Coverage & delete some CSS settings among various dialogs used
- Fix bug where non-json error details text was not formatted pretty in <ErrorDisplay>
- Fix bug that set “undefined” class in <Dialog> when not passing a `contentClass` prop.
- Add new DisplayError classes to oauth_redirect_error template

--- a/lms/static/styles/components/_Dialog.scss
+++ b/lms/static/styles/components/_Dialog.scss
@@ -1,16 +1,11 @@
+@use "../mixins/focus";
 @use "../variables" as var;
 
 
 .Dialog__container {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   position: fixed;
-  left: 0;
   top: 0;
-  right: 0;
-  bottom: 0;
   width: 100%;
   height: 100%;
 }
@@ -26,10 +21,13 @@
 }
 
 .Dialog__content {
+  display: flex;
+  flex-direction: column;
+  max-height: 90vh;
+  max-width: 700px;
   background-color: white;
   border-radius: 3px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   padding: 20px;
 }
 
@@ -40,6 +38,7 @@
 }
 
 .Dialog__cancel-btn {
+  @include focus.outline-on-keyboard-focus;
   border: 0;
   background: none;
   color: var.$grey-6;
@@ -68,6 +67,7 @@
   margin-top: 10px;
 
   .Button {
+    @include focus.outline-on-keyboard-focus;
     &:not(:first-child) {
       margin-left: 5px;
     }
